--- a/web-app/client/main.css
+++ b/web-app/client/main.css
@@ -9,7 +9,7 @@ header {
 	border:1px solid #CCC;
 }
  
-.monheader {
+.myheader {
 	position : relative;
 	left : 50px;
 }
@@ -24,11 +24,9 @@ content {
 
 .query{
   width:500px;
-  margin:20px;
+  margin:10px;
   width:230px;
   position:relative;
-  padding:20px;
-  height:30px;
 }
 
 
