Added error message when wrong code is given

--- a/web-app/client/main.css
+++ b/web-app/client/main.css
@@ -29,6 +29,11 @@ content {
   position:relative;
 }
 
+.unlock_error{
+	color : red;
+	margin : 20px;
+}
+
 
 /* ==========================
    Search Box
