--- a/web-app/client/main.css
+++ b/web-app/client/main.css
@@ -1,6 +1,6 @@
 /* CSS declarations go here */
 body {
-	width:960px;
+	min-width:500px;
 	margin: auto;
 	padding-left: 10px;
 	padding-right: 10px;
